--- a/dashboard.html
+++ b/dashboard.html
@@ -19,7 +19,7 @@
             </div>
             <nav class="user-nav">
                 <a href="profile.html" class="profile-link">Profile</a>
-                <a href="index.html" class="logout-btn" id="logoutBtn">
+                <a href="auth.html" class="logout-btn" id="logoutBtn">
                     <i class="fas fa-sign-out-alt"></i> Logout
                 </a>
             </nav>
